fix: adjust CEO image width to prevent horizontal scroll

--- a/css/kasper.css
+++ b/css/kasper.css
@@ -727,6 +727,7 @@ header nav .form i{
     position: absolute;
     left: 100px;
     top: -20px;
+    width: 150px;
 }
 @media (max-width:1665px){
     .skills .testimonals .srv .image{
